# illinois-voxel-sandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
compiler/: CMakeLists.txt  Compiler.cpp  Compiler.h  Construction.cpp  Intersection.cpp  Parse.cpp
drivers/: CMakeLists.txt  benchmark_graphics.cpp  compile.cpp  convert_model.cpp  island.cpp  ivs.cpp  minecraft_viewer.cpp  model_viewer.cpp  scene_viewer.cpp  sponza.cpp
experiments/: assemble_construction_figures.py  assemble_construction_opt_figures.py  assemble_figures.py  assemble_intersection_opt_figures.py  assemble_main_figures.py  download.sh  experiment.sh
graphics/: CMakeLists.txt  Camera.cpp  Camera.h  Command.cpp  Command.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  ExternalImage.cpp  ExternalImage.h  GPUAllocator.cpp  GPUAllocator.h  Geometry.cpp  Geometry.h  GraphicsContext.cpp  GraphicsContext.h  Pipeline.cpp  Pipeline.h  RingBuffer.cpp  RingBuffer.h  Swapchain.cpp  Swapchain.h  Synchronization.cpp  Synchronization.h  Window.cpp  Window.h
procedural/: CMakeLists.txt
samples/: procedural.json  sponza.json  test.json
shaders/: CMakeLists.txt  DF_Color_rchit.glsl  DF_Color_rint.glsl  Download_rchit.glsl  Emissive_rchit.glsl  Generic_rchit.glsl  Raw_Color_rchit.glsl  Raw_Color_rint.glsl  SVDAG_Color_rchit.glsl  SVDAG_Color_rint.glsl  SVO_Color_rchit.glsl  SVO_Color_rint.glsl  Unloaded_rchit.glsl  Unloaded_rint.glsl  common.glsl  denoise_comp.glsl  df_12_12_12_12_svdag_5_intersect.glsl  df_12_12_12_12_svo_5_intersect.glsl  df_15_7_9_8_svdag_7_intersect.glsl  df_16_16_16_12_df_16_16_16_12_df_16_16_16_12_intersect.glsl  df_16_16_16_12_df_16_16_16_12_raw_16_16_16_intersect.glsl  df_16_16_16_12_raw_16_16_16_df_16_16_16_12_intersect.glsl  df_16_16_16_6_df_8_8_8_6_svdag_4_intersect.glsl  df_16_16_16_6_raw_16_16_16_svdag_4_intersect.glsl  df_16_16_16_6_raw_8_8_8_svdag_4_intersect.glsl  df_16_16_16_6_svdag_5_intersect.glsl  df_16_16_16_6_svdag_7_intersect.glsl  df_16_16_16_6_svdag_8_intersect.glsl  df_16_16_16_6_svo_5_intersect.glsl  df_16_16_16_6_svo_7_intersect.glsl  df_16_16_16_6_svo_8_intersect.glsl  df_24_24_24_8_raw_16_16_16_intersect.glsl  df_256_256_256_12_df_16_16_16_12_intersect.glsl  df_256_256_256_12_svdag_4_intersect.glsl  df_256_256_256_12_svo_4_intersect.glsl  df_32_32_32_6_df_16_16_16_6_intersect.glsl  df_32_32_32_6_raw_16_16_16_intersect.glsl  df_512_512_512_6_intersect.glsl  df_64_64_64_6_raw_64_64_64_intersect.glsl  df_64_64_64_6_svdag_5_intersect.glsl  (+58 more)
utils/: Assert.cpp  Assert.h  CMakeLists.txt
voxel-chunks/: VoxelChunk.h
voxels/: AnvilLoader.cpp  AnvilLoader.h  BrickmapVoxelChunk.cpp  BrickmapVoxelChunk.h  CMakeLists.txt  Conversion.cpp  Conversion.h  RawVoxelChunk.cpp  RawVoxelChunk.h  VoidGrid.cpp  VoidGrid.h  Voxel.cpp  Voxel.h  VoxelChunk.cpp  VoxelChunk.h  VoxelChunkGeneration.cpp  VoxelChunkGeneration.h  VoxelManager.cpp  VoxelManager.h  Voxelize.cpp  Voxelize.h  df_12_12_12_12_svdag_5_construct.cpp  df_12_12_12_12_svo_5_construct.cpp  df_15_7_9_8_svdag_7_construct.cpp  df_16_16_16_12_df_16_16_16_12_df_16_16_16_12_construct.cpp  df_16_16_16_12_df_16_16_16_12_raw_16_16_16_construct.cpp  df_16_16_16_12_raw_16_16_16_df_16_16_16_12_construct.cpp  df_16_16_16_6_df_8_8_8_6_svdag_4_construct.cpp  df_16_16_16_6_raw_16_16_16_svdag_4_construct.cpp  df_16_16_16_6_raw_8_8_8_svdag_4_construct.cpp  df_16_16_16_6_svdag_5_construct.cpp  df_16_16_16_6_svdag_7_construct.cpp  df_16_16_16_6_svdag_8_construct.cpp  df_16_16_16_6_svo_5_construct.cpp  df_16_16_16_6_svo_7_construct.cpp  df_16_16_16_6_svo_8_construct.cpp  df_24_24_24_8_raw_16_16_16_construct.cpp  df_256_256_256_12_df_16_16_16_12_construct.cpp  df_256_256_256_12_svdag_4_construct.cpp  df_256_256_256_12_svo_4_construct.cpp  (+54 more)
voxels/utils/: anvil_id_list.h
