cmake_minimum_required(VERSION 3.0)

if (UNIX)
    find_package(glfw3 REQUIRED)
endif ()
find_package(Vulkan REQUIRED)

function(DEFINE_EXE NAME)
  add_executable(${NAME} ${NAME}.cpp)
  target_include_directories(${NAME} PUBLIC ${CMAKE_SOURCE_DIR})
  target_link_libraries(${NAME} LINK_PUBLIC voxels)
  target_link_libraries(${NAME} LINK_PUBLIC graphics)
  target_link_libraries(${NAME} LINK_PUBLIC utils)
  target_link_libraries(${NAME} LINK_PUBLIC vma)
  target_link_libraries(${NAME} LINK_PUBLIC ogt)
  target_link_libraries(${NAME} PRIVATE Vulkan::Vulkan)
  target_link_libraries(${NAME} PRIVATE glfw)
  #target_link_libraries(${NAME} PRIVATE -fsanitize=address)
  add_dependencies(${NAME} shaders)
endfunction()

DEFINE_EXE(ivs)
DEFINE_EXE(model_viewer)
DEFINE_EXE(minecraft_viewer)
DEFINE_EXE(benchmark_graphics)